# qbo_sigproc

./: .gitignore  README.md  stack.xml
human_detection/: CMakeLists.txt  package.xml
human_detection/SVMLight/: get_raws_model.bash  run_on_lab.bash
human_detection/bagfiles/: recordRaw.bash  testbag.bash
human_detection/data/: test.txt
human_detection/data/annotations/lab/complete/: boxes  log.txt
human_detection/data/mock/: predictions
human_detection/data/model/: model0
human_detection/human_detection_launch/launch/: README  convert_bag_to_frames.launch  human_detection.launch  playall.launch  playallslow.launch  playallwValgrind.launch  playbag.launch  playbagslow.launch  playbagwValgrind.launch  record_frames.launch  seebag.launch  test_segmentation.launch
human_detection/human_detection_launch/launch/old/: runNview.launch
human_detection/src/: README  config.h  config_backup.h  hd_demo.cpp  hd_evaluate.cpp  hd_tag.cpp  hd_train.cpp  hd_train_2.cpp  human_detection (copy).cpp  human_detection.cpp  human_detection_2.cpp  pipeline_times.cpp  save_metric_frames.cpp  segmentation_test2.cpp  utilities.h
human_detection/src/classification/: box_tag.h  descriptor.h
human_detection/src/merge_and_filter/: candidate.h  merge_and_filter.h
human_detection/src/old/: config2.h  driver_test.cpp  hd_train.cpp  utilities.h
human_detection/src/segment_depth/: segment-image.h  segment.h
human_detection/src/utilities/: file_management.h  frame.h
qbo_description/: README.md  mainpage.dox  manifest.xml
qbo_description/calibrations/: left-camera.yaml  right-camera.yaml
qbo_joint_odom/: README.md  mainpage.dox  manifest.xml
qbo_joint_odom/scripts/: qbo_joint_odom.py
qbo_joypad/: CMakeLists.txt  README.md  package.xml
qbo_joypad/launch/: joypad.launch
qbo_joypad/msg/: Mouth.msg
qbo_joypad/src/: joypad_controller.py  joypad_tester.py
qbo_laser_slam/: CMakeLists.txt  README.md  package.xml
qbo_laser_slam/config/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml
qbo_laser_slam/launch/: exploration.launch  mapping.launch  navigation.launch
qbo_laser_slam/launch/old/: fg295.launch  hector_slam.launch  joypad.launch  local.launch  map.launch  mappingOLD.launch  nav.launch  qbo.launch  qbo_gmapping (copy).launch  qbo_gmapping.launch  slam.launch
qbo_laser_slam/launch/old/test/: hector2.launch  hector_slam_simulated.launch
qbo_laser_slam/msg/: Nose.msg
qbo_laser_slam/rviz_cfg/: config.rviz
qbo_laser_slam/src/: exploration_simulator.py  gui.py  laser_reducer.py  location_stack.py
qbo_laser_slam/src/simulator/: map4.pgm  map4.yaml  map8.pgm  map8.yaml
qbo_laser_slam/urdf/: qbo.urdf  qbo_body.dae  qbo_both.dae  qbo_both_test.dae  qbo_head.dae  robot.urdf
qbo_markers/: CMakeLists.txt  package.xml
qbo_markers/launch/: joypad.launch  place_marker.launch
qbo_markers/src/: mark_origin.cpp  place_marker.cpp
qbo_pcl/: CMakeLists.txt  package.xml
qbo_pcl/src/: qbo_cloud_decimator.cpp  qbo_pcl_accumulate.cpp  qbo_pcl_decimator.cpp  qbo_pcl_transform.cpp
qbo_point2point_nav/: CMakeLists.txt  package.xml
qbo_point2point_nav/src/: qbo_point2point_nav.cpp
qbo_registration/: CMakeLists.txt  README.md  package.xml
qbo_registration/src/: qbo_registration.cpp
qbo_rgbd_slam/: CMakeLists.txt  package.xml  qbo_driver_settings_graphSLAM.yaml
qbo_rgbd_slam/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
qbo_rgbd_slam/launch/: graph_slam.rviz  no-odom.launch  pc_map.rviz  qbo_graph_localizaton.launch  qbo_graph_slam.launch  qbo_graph_slam_for_rosbag_recording.launch  qbo_graph_slam_rosbag.launch  qbo_mapping_only_odom.launch  qbo_mapping_only_odom_no_graph.launch  qbo_rgbd_slam.launch  qbo_rgbd_slam_rosbag.launch  qbo_rosbag_accumulate.launch  vo+mapping_rosbag.launch
qbo_rgbd_slam/launch/include/: ccny_device.launch  ccny_openni.launch  ccny_proc.launch  mapping.launch  mapping_real_time.launch  visual_odometry.launch  vo+mapping.launch
qbo_rgbd_slam/scripts/: camera_to_baselink.py  qbo_rgbd_services.py  vo_reference_frame_initializer.py
qbo_rgbd_slam/src/: qbo_corrected_pose_publisher.cpp  qbo_map_odom_publisher.cpp  qbo_odom_publisher.cpp
qbo_sigproc_launch/: README.md  mainpage.dox  manifest.xml
qbo_sigproc_launch/launch/: keyboard_teleop.launch  qbo.launch  qbo_ratslam.launch  qbo_registration.launch  qbo_stereo_cameras.launch  qbo_test_talker.launch  rosbag.launch
qbo_sigproc_launch/launch/include/: bringup_with_sensors.launch  face.launch  face_following.launch  face_tracking.launch  kinect_frames.launch  mono_camera.launch  null.launch  openni.launch  stereo_cameras.launch
qbo_toys/: README.md  mainpage.dox  manifest.xml
qbo_toys/scripts/: head_wander.py  hello_goodbye.py  pointcloud_accumulate.py
seg_depth/: CMakeLists.txt  package.xml
seg_depth/seg_depth_launch/launch/: README  openni_sim.bash  openni_sim.launch  openni_sim_test.bash  openni_sim_test.launch  playbag.launch  playbagslow.launch  viewSeg.launch
seg_depth/src/: seg_color.cpp  seg_color_fast.cpp  seg_color_file.cpp  seg_depth.cpp  seg_depthDud.cpp  seg_depth_3Chan.cpp  seg_human.cpp  seg_humanDud.cpp  segment-image.h  tut.cpp
seg_depth/src/segment_depth/: pnmfile.h  segment-graph.h  segment-image.h  segment.cpp  segment.h
seg_depth/src/segment_rgb_fast/: segment.h
seg_depth/src/segment_rgb_file/: segment.cpp
simple_navigation/: CMakeLists.txt  README.md  package.xml
simple_navigation/launch/: qbo_nav.launch
simple_navigation/scripts/: nav_pose_sub_pub.py  simple_nav_node.py
